Another app layout drawer z-index issue fix

--- a/addon/src/main/resources/META-INF/resources/frontend/vaadin-full-calendar/full-calendar-styles.css
+++ b/addon/src/main/resources/META-INF/resources/frontend/vaadin-full-calendar/full-calendar-styles.css
@@ -10,7 +10,7 @@ vaadin-full-calendar {
 }
 
 /* Fix for https://github.com/stefanuebe/vaadin_fullcalendar/issues/108*/
-.fc .fc-scrollgrid-section-sticky > * {
+.fc *:is(.fc-scrollgrid-section-sticky, .fc-scroller-harness) > * {
     z-index: 1;
 }
 
